new file:   Academic-Calendar-2023-2024.pdf modified:   Accreditation.html 	modified:   Admission.html 	new file:   CPC-Add_Drop-Form.pdf 	modified:   Christain identity.html 	new file:   Fall-2023-Schedule-UPDATED-1.pdf 	modified:   History.html 	modified:   Leadership.html modified:   Mission.html 	new file:   P.CPC-Catalog-2022.23.pdf 	new file:   Transcript-Request-Form-2022.pdf 	modified:   about_us.html 	modified:   contact us.html 	modified:   courses.html 	modified:   courses_details.html 	modified:   css/style.css 	deleted:    event_details.html 	modified:   events.html 	renamed:    form (1).php -> form.php 	new file:   images/Health science.jpg 	new file:   images/HealthCare.jpg 	new file:   images/Privacy 1.jpg 	new file:   images/Privacy 2.jpg 	new file:   images/Privacy 3.jpg 	new file:   images/Student services.jpg 	new file:   images/checked.png 	new file:   images/cpc-banner.jpg 	new file:   images/english1.jpg 	new file:   images/inland-empire-pic.png 	new file:   images/non-discrimination.jpg 	new file:   images/service area3.jpg 	new file:   images/service-area2.jpg 	new file:   images/western health care.png 	new file:   images/woman (2).png 	modified:   index.html 	new file:   learning.html 	renamed:    terms_condition.html -> life_counselor.html 	modified:   non-discrimination.html 	new file:   notification.html 	modified:   privacy_policy.html 	new file:   programs.html 	modified:   registry.html 	deleted:    research.html 	modified:   service area.html 	modified:   sign_in.html 	modified:   sign_up.html 	modified:   student'life.html 	new file:   style2.css

--- a/css/style.css
+++ b/css/style.css
@@ -6489,3 +6489,100 @@ padding: 20px 10px;
     margin-right:100px;
     padding:20px 10px;
 }
+.privacy_policy_img {
+    width:25%;
+    float:right;
+    margin-left: 18px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 20px 10px; 
+}.privacy_policy2_img {
+    width:40%;
+    float:left;
+    margin-left: 18px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 20px 10px; 
+}.privacy_policy3_img {
+    width:40%;
+    float:right;
+    margin-left: 18px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 20px 10px; 
+}
+.discriminationn_img{
+    width:50%;
+    float:right;
+    margin-left:20px;
+    margin-right:0px;
+    padding: 20px;
+}
+.discrimination_text{
+    margin-left:80px;
+    margin-right: 80px;
+    margin-top: 0;
+    margin-bottom: 0;
+   padding:20px 10px;
+}
+.discrimination2_text{
+    margin-left:80px;
+    margin-right: 80px;
+    margin-top: 0;
+    margin-bottom: 0;
+   padding:20px 10px; 
+}
+.inland-empire_img {
+width:40%;
+float:right;
+padding: 0px 10px;
+}
+
+.service_area3_img{
+    width:20%;
+    float:left;
+    margin:0 20px 0 20px;
+    padding:0px 10px;
+}
+.service-area2{
+    width:50%;
+    float:right;
+    margin:0 20px 0 0;
+    padding:0px 10px;
+}
+.columns{
+    text-align: center;
+ display:grid;
+ grid-template-columns:50% 50%;
+}
+.columns2{
+    display:grid;
+    grid-template-columns: 50% 50%;
+}
+
+/* tablet breakpoint */
+@media (min-width:600px) {
+    .responsive-two-column-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+.registry_img{
+    width:50%;
+    float:right;
+    margin:0 20px 0 0;
+    padding:0px 10px;
+}
+.student_service_img{
+    width:40%;
+float:right;
+padding: 0px 10px;
+margin:0 20px 0 0;
+}
+.studentservice_text{
+    margin-left:80px;
+    margin-right: 80px;
+    margin-top: 0;
+    margin-bottom: 0;
+   padding:20px 10px; 
+}
